--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,26 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="99f37e">  <td>20/02/02 08:33:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.booking2Room2Adult2Child(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@7b49cea0]">booking2Room2Adult2Child</td> 
-  <td>main@648680157</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>20/02/02 08:35:23</td>   <td>114764</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.bookingFlightAndHotelForSingleCity(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@7b49cea0]">bookingFlightAndHotelForSingleCity</td> 
-  <td>main@648680157</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>20/02/02 08:35:43</td>   <td>134812</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.bookingFlightsWithmultipleCities(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@7b49cea0]">bookingFlightsWithmultipleCities</td> 
-  <td>main@648680157</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>20/02/02 08:36:03</td>   <td>154874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.bookingSingleRoom1Adult1Child(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@7b49cea0]">bookingSingleRoom1Adult1Child</td> 
-  <td>main@648680157</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>20/02/02 08:36:23</td>   <td>174904</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.bookingSingleRoomWith3Adults(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@7b49cea0]">bookingSingleRoomWith3Adults</td> 
-  <td>main@648680157</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>20/02/02 08:36:43</td>   <td>194952</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.bookingTwoRoom2Adult(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@7b49cea0]">bookingTwoRoom2Adult</td> 
-  <td>main@648680157</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>20/02/02 08:37:03</td>   <td>214990</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.bookingTwoRoom3Adult1Child(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@7b49cea0]">bookingTwoRoom3Adult1Child</td> 
-  <td>main@648680157</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>20/02/02 08:37:23</td>   <td>235081</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.getWithoutAir(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@7b49cea0]">getWithoutAir</td> 
-  <td>main@648680157</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>20/02/02 08:33:12</td>   <td>-15699</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@7b49cea0]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@648680157</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>20/02/02 08:38:03</td>   <td>275229</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@7b49cea0]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@648680157</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>20/02/02 08:37:43</td>   <td>255159</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.withoutAirBookingForSingleCity()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@7b49cea0]">withoutAirBookingForSingleCity</td> 
-  <td>main@648680157</td>   <td></td> </tr>
+<tr bgcolor="939fd1">  <td>20/02/03 17:56:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.dateChanging_TC_18()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6c49835d]">dateChanging_TC_18</td> 
+  <td>main@1039949752</td>   <td></td> </tr>
+<tr bgcolor="b590b9">  <td>20/02/03 17:56:07</td>   <td>-15612</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6c49835d]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1039949752</td>   <td></td> </tr>
+<tr bgcolor="b590b9">  <td>20/02/03 17:57:18</td>   <td>55991</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6c49835d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1039949752</td>   <td></td> </tr>
 </table>
