--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,40 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<<<<<<< HEAD
-<tr bgcolor="b3acfe">  <td>20/02/02 08:33:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@7b49cea0]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@648680157</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>20/02/02 08:33:28</td>   <td>15699</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.booking2Room2Adult2Child(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@7b49cea0]">booking2Room2Adult2Child</td> 
-  <td>main@648680157</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>20/02/02 08:35:23</td>   <td>130463</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.bookingFlightAndHotelForSingleCity(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@7b49cea0]">bookingFlightAndHotelForSingleCity</td> 
-  <td>main@648680157</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>20/02/02 08:35:43</td>   <td>150511</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.bookingFlightsWithmultipleCities(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@7b49cea0]">bookingFlightsWithmultipleCities</td> 
-  <td>main@648680157</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>20/02/02 08:36:03</td>   <td>170573</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.bookingSingleRoom1Adult1Child(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@7b49cea0]">bookingSingleRoom1Adult1Child</td> 
-  <td>main@648680157</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>20/02/02 08:36:23</td>   <td>190603</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.bookingSingleRoomWith3Adults(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@7b49cea0]">bookingSingleRoomWith3Adults</td> 
-  <td>main@648680157</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>20/02/02 08:36:43</td>   <td>210651</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.bookingTwoRoom2Adult(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@7b49cea0]">bookingTwoRoom2Adult</td> 
-  <td>main@648680157</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>20/02/02 08:37:03</td>   <td>230689</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.bookingTwoRoom3Adult1Child(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@7b49cea0]">bookingTwoRoom3Adult1Child</td> 
-  <td>main@648680157</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>20/02/02 08:37:23</td>   <td>250780</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.getWithoutAir(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@7b49cea0]">getWithoutAir</td> 
-  <td>main@648680157</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>20/02/02 08:37:43</td>   <td>270858</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.withoutAirBookingForSingleCity()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@7b49cea0]">withoutAirBookingForSingleCity</td> 
-  <td>main@648680157</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>20/02/02 08:38:03</td>   <td>290928</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@7b49cea0]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@648680157</td>   <td></td> </tr>
-=======
-<<<<<<< HEAD
-<tr bgcolor="93948d">  <td>20/01/29 13:00:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@32709393]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@2048834776</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>20/01/29 13:00:41</td>   <td>8777</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.bookingMultipleCityWithoutAir()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@32709393]">bookingMultipleCityWithoutAir</td> 
-  <td>main@2048834776</td>   <td></td> </tr>
-=======
-<tr bgcolor="a863b6">  <td>20/01/30 18:11:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@69b0fd6f]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@369241501</td>   <td></td> </tr>
-<tr bgcolor="9286a3">  <td>20/01/30 18:11:12</td>   <td>10691</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTest.getWithoutAir()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTest@69b0fd6f]">getWithoutAir</td> 
-  <td>main@369241501</td>   <td></td> </tr>
->>>>>>> 22e9ecc02be1c6f0a520a031d40368ff263c5368
->>>>>>> 1ca0d8bf2a4347fe44357d5cd5c47cd789d0f1d0
+<tr bgcolor="a863b6">  <td>20/02/03 18:19:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@69b0fd6f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1151593579</td>   <td></td> </tr>
+<tr bgcolor="9286a3">  <td>20/02/03 18:19:16</td>   <td>10025</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.removeAddedCity_TC_17()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@69b0fd6f]">removeAddedCity_TC_17</td> 
+  <td>main@1151593579</td>   <td></td> </tr>
+<tr bgcolor="a863b6">  <td>20/02/03 18:20:53</td>   <td>107197</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@69b0fd6f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1151593579</td>   <td></td> </tr>
 </table>
